--- a/FinancialChat/ClientApp/src/app/chatroom-list/delete-chatroom-modal/delete-chatroom-modal.component.html
+++ b/FinancialChat/ClientApp/src/app/chatroom-list/delete-chatroom-modal/delete-chatroom-modal.component.html
@@ -1,16 +1,10 @@
-<div class="modal">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Modal title</h5>
-        </div>
-        <div class="modal-body">
-          <p>Modal body text goes here.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger">Delete</button>
-          <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cancel</button>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="modal-header">
+    <h4>Delete Chat Room</h4>
+</div>
+<div class="modal-body">
+    <h5>Are you sure you want to delete this Chat Room?</h5>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-outline-secondary" (click)="activeModal.dismiss()">Cancel</button>
+    <button type="button" class="btn btn-danger" (click)="activeModal.close()">Delete</button>
+</div>
